# esp-gsl

./: .gitignore  .idf_build_apps.toml  .ignore_build_warnings.txt  CHANGELOG.md  CMakeLists.txt  README.md  esp-gsl.cmake  idf_component.yml
.github/workflows/: build_examples.yml  sync_esp_pkgmng.yml
build_lib/: CMakeLists.txt
examples/test_project/: CMakeLists.txt  README.md
examples/test_project/main/: CMakeLists.txt  idf_component.yml  test_main.c
gsl-2.7.1/: NEWS  configure  configure.ac
include/: README.md
lib/: README.md
